--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@
 	margin: 0 auto;
 	padding: 0;
 	list-style: none;
-    background-color:rgb(0, 0, 20);
+    background-color:rgb(41, 41, 46);
     width: 100%;
     height: 580px;
     text-align: center;
@@ -24,7 +24,7 @@
 	/*height: 280px;*/
 	display: inline-block;
 	border: 2px;
-	border-style: solid;
+	border-style: hidden;
 	border-radius: 20px;
     padding: 40px;
 }
